--- a/pom.xml
+++ b/pom.xml
@@ -75,6 +75,42 @@
             <version>3.2.0-m11</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>8.0.15</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.datanucleus</groupId>
+            <artifactId>datanucleus-core</artifactId>
+            <version>5.2.0-release</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.datanucleus</groupId>
+            <artifactId>datanucleus-api-jdo</artifactId>
+            <version>5.2.0-release</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.xerial</groupId>
+            <artifactId>sqlite-jdbc</artifactId>
+            <version>3.27.2.1</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.datanucleus</groupId>
+            <artifactId>datanucleus-rdbms</artifactId>
+            <version>5.2.0-release</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>9.1-901-1.jdbc4</version>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -124,7 +160,7 @@
                     <includes>
                         <include>**/*</include>
                     </includes>
-                    <repositoryName>SRegionProtector</repositoryName>
+                    <repositoryName>SVault</repositoryName>
                     <repositoryOwner>SergeyDertan</repositoryOwner>
                 </configuration>
                 <executions>
@@ -183,6 +219,25 @@
                     <jvmTarget>1.8</jvmTarget>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>org.datanucleus</groupId>
+                <artifactId>datanucleus-maven-plugin</artifactId>
+                <version>5.0.1</version>
+                <configuration>
+                    <api>JDO</api>
+                    <props>${basedir}/datanucleus.properties</props>
+                    <log4jConfiguration>${basedir}/log4j.properties</log4jConfiguration>
+                    <verbose>true</verbose>
+                </configuration>
+                <executions>
+                    <execution>
+                        <phase>process-classes</phase>
+                        <goals>
+                            <goal>enhance</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
         </plugins>
         <resources>
             <resource>
@@ -194,11 +249,21 @@
                 </includes>
             </resource>
             <resource>
-                <targetPath>resources/</targetPath>
+                <targetPath>resources</targetPath>
                 <directory>${basedir}/src/main/resources</directory>
                 <filtering>false</filtering>
                 <includes>
                     <include>config.yml</include>
+                </includes>
+            </resource>
+            <resource>
+                <targetPath>resources/db</targetPath>
+                <directory>${basedir}/src/main/resources/db</directory>
+                <filtering>false</filtering>
+                <includes>
+                    <include>mysql.yml</include>
+                    <include>postgresql.yml</include>
+                    <include>sqlite.yml</include>
                 </includes>
             </resource>
             <resource>
