--- a/pom.xml
+++ b/pom.xml
@@ -49,6 +49,7 @@
             <id>nukkitx</id>
             <url>https://repo.nukkitx.com/main/</url>
         </repository>
+
     </repositories>
     <dependencies>
         <dependency>
@@ -109,6 +110,12 @@
             <groupId>postgresql</groupId>
             <artifactId>postgresql</artifactId>
             <version>9.1-901-1.jdbc4</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.creeperface.nukkit.placeholderapi</groupId>
+            <artifactId>PlaceholderAPI</artifactId>
+            <version>1.0-SNAPSHOT</version>
             <scope>provided</scope>
         </dependency>
     </dependencies>
