Migrate command list command fix

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -30,3 +30,5 @@ permissions:
                 default: op
               svault.command.vault:
                 default: true
+              svault.command.migrate:
+                default: op
